<resources>
    <string name="app_name">TeamProjectManager</string>
    <string name="id">ID</string>
    <string name="pw">PW</string>
    <string name="login">Sign in With Google</string>
    <string name="miss_pw">비밀번호를 잊으셨나요?</string>
    <string name="join">회원가입</string>
    <string name="project_manager">Project Manager</string>
    <string name="introduce">Team Project Manager</string>
    <string name="title_activity_home">Project Manager</string>
    <string name="actionbar_settings">설정</string>
    <string name="actionbar_my_info">내정보</string>
    <string name="actionbar_invite">초대</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="project_create">프로젝트 생성하기</string>
    <string name="add_member">멤버 추가</string>
    <string name="create_button">생성 완료</string>
    <string name="cancel">취소</string>
    <string name="board_write_hint">멤버들에게 전할 소식을 작성하세요.</string>
    <string name="board_search_hint">작성자,글 내용으로 검색</string>
    <string name="board_search">검색</string>
    <string name="board_write">작성</string>
    <string name="add_meeting">모임투표를 등록할 날짜와 시간을 선택하세요</string>
    <string name="button_meeting_add">모임 등록</string>
    <string name="button_return">돌아가기</string>
    <string name="chat_send_button">전송</string>
    <string name="actionbar_logout">로그아웃</string>

</resources>
