<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="cc.foxtail.teamprojectmanager.ProjectFragment">
    <item
        android:id="@+id/actionbar_settings"
        android:orderInCategory="100"
        android:title="@string/actionbar_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/actionbar_my_info"
        android:orderInCategory="100"
        android:title="@string/actionbar_my_info"
        app:showAsAction="never"/>
    <item
        android:id="@+id/actionbar_invite"
        android:orderInCategory="100"
        android:title="@string/actionbar_invite"
        app:showAsAction="never"/>
    <item
        android:id="@+id/actionbar_logout"
        android:orderInCategory="100"
        android:title="@string/actionbar_logout"
        app:showAsAction="never"/>
</menu>
