<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/select_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_meeting"
        android:gravity="center" />

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/time_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_date_time"
        android:paddingBottom="50dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/time_recycler_view"
        android:orientation="horizontal"
        android:layout_centerInParent="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_meeting_add"

            android:id="@+id/add_meeting_button" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_return"
            android:layout_gravity="bottom"
            android:id="@+id/return_button"
            />
    </LinearLayout>




</RelativeLayout>